# Scikit-LLM-Example

./: README.md  app.py  pyproject.toml
data/: classification_dataset.py  multi_label_dataset.py
